2005-08-22  Youchen Lee  <youchen.lee@gmail.com>

	* data/nancy_bot/default_msg.data,
	data/nancy_bot/default.conf: Added more comments for user.

2005-08-22  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/nancy_bot/msgdata.cpp:
	Remove MsgData::my_copy(), use copyfile() instead.

2005-08-22  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/core/fileutil.c:
	Add copyfile() to copy file since it's not provided by the system.

	* src/nancy_bot/msgdata.cpp:
	Remove MsgData::my_copy(), use copyfile() instead.

	* src/nancy_bot/nancybot.cpp:
	Change default learning level:
	LEVEL__ASK_UNKNOW_MSG = 10
	LEVEL__RE_LEARNING = 5

2005-08-22  Youchen Lee  <youchen.lee@gmail.com>

	* configure.ac: Added zh_CN.po ( Edited by Optical-dlz ).
	
	* src/nancy_bot/msgdata.cpp,
	src/nancy_bot/msgdata.h: Added mkdir of ~/.pcmanx/nancy_bot/.
	Added function my_copy(), but cause ld error.

	* src/view/telnetcon.cpp: Changed nancy CONFIG_PATH to
	~/.pcmanx/nancy_bot/ .

2005-08-21  Youchen Lee  <youchen.lee@gmail.com>

	* configure.ac,
	README: Set --enable-nancy as default.
	* TODO: Added severial todos.

2005-08-21  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/mainframe.cpp:
	Add a simple control menu to swich Nancy Bot on and off.
	Add a pane to status bar to indicate whether NancyBot is enabled.
	Add a pane to status bar displaying elapsed time.

2005-08-20  Youchen Lee  <youchen.lee@gmail.com>

	* src/view/telnetcon.cpp,
	src/view/telnetcon.h: Fixed grep waterballs in ptts.
	Added static functions and vars to control with_nancy_support.
	Added functions to control use_nancy in run time.

2005-08-20  Youchen Lee  <youchen.lee@gmail.com>

	* src/nancy_bot/nancybot.cpp,
	src/nancy_bot/api.h: Now NancyBot::replaceString() could replace
	more than one strings.
	Added "NancyBot Settings HOWTO" in api.h.

	* src/nancy_bot/msgdata.h: Comment fixed.

2005-08-20  Youchen Lee  <youchen.lee@gmail.com>

	* src/nancy_bot/nancybot.cpp,
	src/nancy_bot/msgdata.cpp,